update: atualização de responsividade

--- a/src/components/LeftMenu/styles.scss
+++ b/src/components/LeftMenu/styles.scss
@@ -148,3 +148,12 @@
         cursor: default;
     }
 }
+
+
+// RESPONSIVIDADE
+
+@media screen and (max-width: 1024px) {
+    .containerMenu{
+        display: none;
+    }
+}
