--- a/src/pages/Home/RightHome/styles.scss
+++ b/src/pages/Home/RightHome/styles.scss
@@ -29,6 +29,7 @@
 
 .mainHome {
     display: flex;
+    justify-content: space-between;
     border-bottom: 1.5px solid var(--branco3);
     padding-bottom: 10px;
 
@@ -63,6 +64,7 @@
             gap: 8px;
             color: var(--branco2);
             text-decoration: none;
+            margin-bottom: 2rem;
         }
         a:hover {
             color: var(--branco1);
@@ -70,10 +72,11 @@
         }
     }
     
-    .personalPic {
-        width: 50%;
-        padding: 0 4rem 0 4rem;
-        opacity: 0.7;
+    img {
+        width: 25rem;
+        height: 30rem;
+        margin-right: 2rem;
+        opacity: 0.8;
     }
 }
 
@@ -126,4 +129,82 @@
             }
         }
     }
+}
+
+@media screen and (max-width: 1150px) {
+    .mainHome {
+        .AboutMe{
+            h1 {
+                font-size: 2.5rem;
+            }
+            span {
+                font-size: 0.9rem;
+            }
+            
+        img {
+            opacity: 0.8;
+        }
+    }
+  }
+}
+
+@media screen and (max-width: 1034px) {
+    .mainHome {
+        .AboutMe{
+            h1 {
+                font-size: 2.2rem;
+            }
+            span {
+                font-size: 0.9rem;
+            }
+            
+        img {
+            opacity: 0.8;
+        }
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+    .mainHome {
+        .AboutMe{
+            h1 {
+                font-size: 5.5vw;
+            }
+            span {
+                font-size: 1rem;
+            }
+            
+        img {
+            opacity: 0.8;
+        }
+    }
+  }
+}
+
+@media screen and (max-width: 800px) {
+    .mainHome {
+        flex-direction: column-reverse;
+        align-items: center;
+        .AboutMe{
+            width: 80%;
+            padding-top: 2.1rem;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+
+            h1 {
+                font-size: 3.4rem;
+            }
+            span {
+                font-size: 1rem;
+                line-height: 1.5;
+                margin-bottom: 2rem;
+            }
+            
+        img {
+            opacity: 0.8;
+        }
+    }
+  }
 }
