--- a/src/pages/Home/RightHome/styles.scss
+++ b/src/pages/Home/RightHome/styles.scss
@@ -201,11 +201,11 @@
                 line-height: 1.5;
                 margin-bottom: 2rem;
             }
-            
-        img {
-            opacity: 0.8;
-        }
     }
+        img {
+            width: 20rem;
+            height: 25rem;
+        }
   }
 }
 
