--- a/src/components/ExperienciaATC/styles.scss
+++ b/src/components/ExperienciaATC/styles.scss
@@ -48,3 +48,50 @@ article {
         font-size: 1.1rem;
     }
 }
+
+@media screen and (max-width: 800px) {
+    article {
+        flex-direction: column;
+        gap: 0;
+    }
+
+    .infoExperiencia {
+        display: flex;
+        position: static;
+        flex-direction: column;
+        padding-right: 2rem;
+        padding-bottom: 1rem;
+        gap: 0.3rem;
+        border-right: 0;
+    
+        h3 {
+            font-size: 1.1rem;
+            width: 20rem;
+        }
+    
+        h4 {
+            color: var(--principal1);
+            font-size: 0.8rem;
+            font-weight: 600;
+        }
+    
+        span {
+            font-size: 0.65rem;
+            font-weight: 400;
+            color: var(--branco3);
+        }
+
+    }
+
+    .infoExperiencia::before {
+        display: none;
+    }
+
+    .descExperiencia {
+        padding-bottom: 1rem;
+        border-bottom: 1px solid var(--branco3);
+        span {
+            font-size: 1rem;
+        }
+    }
+}
