--- a/src/pages/Contact/styles.scss
+++ b/src/pages/Contact/styles.scss
@@ -91,3 +91,48 @@
         font-weight: 600;
     }
 }
+
+@media screen and (max-width: 770px) {
+    .headerContact {
+        cursor: default;
+        margin-bottom: 1rem;
+    
+        div {
+            border-bottom: 1.5px solid var(--branco3);
+            padding-bottom: 10px;
+    
+            h1 {
+                color: var(--branco1);
+                font-weight: 700;
+                font-size: 2rem;
+            }
+            span {
+                color: var(--branco2);
+                font-weight: 500;
+                font-size: 0.9rem;
+            }
+        }
+        
+    }
+}
+
+@media screen and (max-width: 590px) {
+    .mainContact {
+        cursor: default;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        padding-top: 1rem;
+    
+        h3 {
+            margin-bottom: 0.4rem;
+            font-size: 1.1rem;
+        }
+    
+        span {
+            color: var(--branco3);
+            font-size: 1rem;
+        }
+
+    }
+}
