--- a/src/pages/Projects/styles.scss
+++ b/src/pages/Projects/styles.scss
@@ -54,3 +54,27 @@
         font-weight: 600;
     }
 }
+
+@media screen and (max-width: 770px) {
+    .headerProjects {
+        cursor: default;
+        margin-bottom: 1rem;
+    
+        div {
+            border-bottom: 1.5px solid var(--branco3);
+            padding-bottom: 10px;
+    
+            h1 {
+                color: var(--branco1);
+                font-weight: 700;
+                font-size: 2rem;
+            }
+            span {
+                color: var(--branco2);
+                font-weight: 500;
+                font-size: 0.9rem;
+            }
+        }
+        
+    }
+}
