--- a/src/pages/Skills/RightSkills/styles.scss
+++ b/src/pages/Skills/RightSkills/styles.scss
@@ -91,3 +91,52 @@
     gap: 2rem;
     padding-bottom: 2rem;
 }
+
+@media screen and (max-width: 800px) {
+    .headerSkills {
+        cursor: default;
+        margin-bottom: 2rem;
+    
+        div {
+            border-bottom: 1.5px solid var(--branco3);
+            padding-bottom: 10px;
+    
+            h1 {
+                color: var(--branco1);
+                font-weight: 700;
+                font-size: 2rem;
+            }
+            span {
+                color: var(--branco2);
+                font-weight: 500;
+                font-size: 0.9rem;
+            }
+        }
+        
+    }
+
+    .mainSkills {
+        display: grid;
+        grid-template-columns: repeat(6,minmax(0,1fr));
+        gap: 1rem;  
+        border-bottom: 1.5px solid var(--branco3);
+        padding-bottom: 2rem;
+    }
+}
+
+@media screen and (max-width: 590px) {
+    .mainSkills {
+        display: grid;
+        grid-template-columns: repeat(4,minmax(0,1fr));
+        gap: 1rem;  
+        border-bottom: 1.5px solid var(--branco3);
+        padding-bottom: 2rem;
+    }
+
+    .skillContainer {
+        display: grid;
+        grid-template-columns: repeat(1,minmax(0,1fr));
+        gap: 2rem;
+        padding-bottom: 2rem;
+    }
+}
