--- a/src/components/HeaderMobile/BurgerMenu/styles.scss
+++ b/src/components/HeaderMobile/BurgerMenu/styles.scss
@@ -1,12 +1,17 @@
+.is-opened {
+    display: inline !important;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 19;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
 .containerBurguer {
     position: relative;
-    
-    div {
-        // FAZER NO TOGGLE
-        // width: 100vw;
-        // height: 100vh;
-        // position: absolute;
-    }
+
     ul {
         position: absolute;
         left: -10rem;
